Let's Go!
Replaced deprecated fields with non-deprecated ones and more