@@ -16,6 +16,7 @@
 package ghidra.feature.fid.service;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 import java.util.function.Predicate;
 
@@ -63,20 +64,20 @@ public class FidService {
 			ClassSearcher.getClasses(InstructionSkipper.class);
 		for (Class<? extends InstructionSkipper> clazz : classes) {
 			try {
-				InstructionSkipper skipper = clazz.newInstance();
+				InstructionSkipper skipper = clazz.getConstructor().newInstance();
 				Processor processor = skipper.getApplicableProcessor();
-				List<InstructionSkipper> list = skippers.get(processor);
-				if (list == null) {
-					list = new ArrayList<>();
-					skippers.put(processor, list);
-				}
-				list.add(skipper);
+                List<InstructionSkipper> list = skippers.computeIfAbsent(processor, k -> new ArrayList<>());
+                list.add(skipper);
 			}
 			catch (InstantiationException e) {
 				// we tried
 			}
 			catch (IllegalAccessException e) {
 				// we tried
+			} catch (NoSuchMethodException e) {
+				e.printStackTrace();
+			} catch (InvocationTargetException e) {
+				e.printStackTrace();
 			}
 		}
 	}
